--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,13 @@ dependencies:
     sdk: flutter
   intl: ^0.18.0
   cupertino_icons: ^1.0.8
+  youtube_player_iframe: ^4.0.4
+  provider: ^6.1.2
+  http: ^1.1.0
+  shared_preferences: ^2.2.0  
+  image_picker: ^1.1.2
+ 
+
 
 dev_dependencies:
   flutter_test:
