--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   youtube_player_iframe: ^4.0.4
   provider: ^6.1.2
-  http: ^1.1.0
+  http: ^0.13.6
   shared_preferences: ^2.2.0  
   image_picker: ^1.1.2
- 
-
+  google_sign_in: ^6.1.6
+  sign_in_with_apple: ^5.0.0
+  flutter_facebook_auth: ^5.0.6
+  firebase_auth: ^4.15.3
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
@@ -28,11 +31,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   url_launcher: ^6.3.1
 
-
 flutter_app_name:
   name: "Care Connect"
-
-
 
 flutter:
   uses-material-design: true
