--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+# Add these properties to fix namespace and related issues
 android.useAndroidX=true
 android.enableJetifier=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+android.defaults.buildfeatures.buildConfig=true
+android.defaults.buildfeatures.namespacing=true
