--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,23 @@ dependencies:
   image_picker: ^1.1.2
   google_sign_in: ^6.1.6
   sign_in_with_apple: ^5.0.0
-  flutter_facebook_auth: ^5.0.6
   firebase_auth: ^4.15.3
-  firebase_core: ^2.24.2
+  flutter_local_notifications: ^18.0.1
+  firebase_messaging: ^14.7.10
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.17.5
+  # firebase_messaging: ^14.6.7
+  # firebase_core: ^3.13.0
+  # cloud_firestore: ^5.6.6
+ 
+  # Update to a more stable version
+
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_app_name: ^0.1.0
+  # flutter_app_name: ^0.1.0
   flutter_lints: ^5.0.0
   url_launcher: ^6.3.1
 
