--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_core: ^2.32.0
   cloud_firestore: ^4.17.5
+  sqflite: ^2.3.2
+  path: ^1.8.3
   # firebase_messaging: ^14.6.7
   # firebase_core: ^3.13.0
   # cloud_firestore: ^5.6.6
