--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,8 @@
 # Add these properties to fix namespace and related issues
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
-android.nonTransitiveRClass=false
+android.nonTransitiveRClass=true
 android.nonFinalResIds=false
 android.defaults.buildfeatures.buildConfig=true
 android.defaults.buildfeatures.namespacing=true
