--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   cloud_firestore: ^4.17.5
   sqflite: ^2.3.2
   path: ^1.8.3
+  google_api_availability: ^5.0.1
+  flutter_chat_types: ^3.6.2
+  flutter_chat_ui: ^1.6.15
   # firebase_messaging: ^14.6.7
   # firebase_core: ^3.13.0
   # cloud_firestore: ^5.6.6
