--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_api_availability: ^5.0.1
   flutter_chat_types: ^3.6.2
   flutter_chat_ui: ^1.6.15
+  flutter_secure_storage: ^9.2.4
   # firebase_messaging: ^14.6.7
   # firebase_core: ^3.13.0
   # cloud_firestore: ^5.6.6
