--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_chat_types: ^3.6.2
   flutter_chat_ui: ^1.6.15
   flutter_secure_storage: ^9.2.4
+  uuid: ^4.5.1
+  connectivity_plus: ^6.1.4
   # firebase_messaging: ^14.6.7
   # firebase_core: ^3.13.0
   # cloud_firestore: ^5.6.6
